--- a/style.css
+++ b/style.css
@@ -190,8 +190,8 @@ footer p a {
     }
 
     .items .frame{
-        width: 100%;
-        height: 100%;
+        height: 60px;
+        width: 50px;
     }
 
 /* mobile menu */
