--- a/style.css
+++ b/style.css
@@ -195,7 +195,8 @@ footer p a {
     }
     
     .card-contaner .about{
-        left: -10px;
+        left: 10px;
+        letter-spacing: 0;
     }
     
     .itmes .desc {
