--- a/style.css
+++ b/style.css
@@ -195,7 +195,7 @@ footer p a {
     }
     
     .card-contaner .about{
-        left: 10px;
+        right: 40px;
         letter-spacing: 0;
     }
     
