--- a/style.css
+++ b/style.css
@@ -195,7 +195,7 @@ footer p a {
     }
     
     .card-contaner .about{
-        padding-right: 40px;
+        padding-left: 140px;
         letter-spacing: 0;
     }
     
