--- a/style.css
+++ b/style.css
@@ -194,7 +194,7 @@ footer p a {
         width: 320px;
     }
     
-    .card-contaner .about{
+    .about{
         padding-left: 140px;
         letter-spacing: 0;
     }
