--- a/style.css
+++ b/style.css
@@ -195,7 +195,7 @@ footer p a {
     }
     
     .about{
-        padding-left: 440px;
+        left: 440px;
         letter-spacing: 0;
     }
     
