--- a/style.css
+++ b/style.css
@@ -257,9 +257,14 @@ footer p a {
     }
  
     .card-contaner {
-        width: 55%;
+        width: 95%;
         margin-top: -80px;
         margin-right: 1rem;
+    }
+    
+    .about{
+        margin-right: 80px;
+        letter-spacing: 0;
     }
 
     footer {
