--- a/style.css
+++ b/style.css
@@ -265,7 +265,7 @@ footer p a {
     .about{
         margin-right: 80px;
         letter-spacing: 0;
-        padding-left: -210px;
+        justify-content: center;
     }
 
     footer {
