--- a/style.css
+++ b/style.css
@@ -258,6 +258,7 @@ footer p a {
  
     .card-contaner {
         width: 85%;
+        height: 50%;
         margin-top: -80px;
         margin-right: 1rem;
     }
@@ -265,7 +266,7 @@ footer p a {
     .about{
         margin-right: 80px;
         letter-spacing: 0;
-        justify-content: center;
+        
     }
 
     footer {
