--- a/style.css
+++ b/style.css
@@ -258,7 +258,7 @@ footer p a {
  
     .card-contaner {
         width: 85%;
-        height: 50%;
+        height: 50px;
         margin-top: -80px;
         margin-right: 1rem;
     }
